wip - add adminstration area, authentification, front-end design

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -25,6 +25,7 @@ menu:
     contact: Contacts
     personnal_projects: Personnels
     professional_projects: Professionels
+    connexion_btn: Se connecter
 languages:
     us: USA
     spain: Espagnol
